Fix badge spacing in accordion - #1897

--- a/src/sass/components/accordion.scss
+++ b/src/sass/components/accordion.scss
@@ -96,3 +96,11 @@
     }
   }
 }
+
+.accordion-button {
+  .title_badge {
+    @include md-mx {
+      margin-top: 5px;
+    }
+  }
+}
